# oxipodder

./: Cargo.toml
oxipodder-backend/: Cargo.toml
oxipodder-backend/src/: downloader.rs  helpers.rs  lib.rs  types.rs
oxipodder-cli/: Cargo.toml
oxipodder-cli/src/: download_view.rs  main.rs
