[package]
name = "oxipodder-backend"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam = "0.8.4"
ez-ffmpeg = "0.5.1"
filetime = "0.2.25"
indicatif = "0.17.12"
opml = "1.1.6"
reqwest = { version = "0.12.21", features = ["blocking"] }
rss = { version = "2.0.12", features = ["atom", "chrono", "url", "with-serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.5.4", features = ["serde"] }
